Fixed Colors in Dark Mode

--- a/src/about.css
+++ b/src/about.css
@@ -167,7 +167,7 @@
 }
 
 .dark-mode .about h2 {
-  color: #80dfff;
+  color: #00cfe8;
 }
 
 .dark-mode .about-content p {
@@ -181,7 +181,7 @@
 }
 
 .dark-mode .about-cards .card h3 {
-  color: #80dfff;
+  color: #00cfe8;
 }
 
 .dark-mode .about-cards .card:hover {
