--- a/src/experience.css
+++ b/src/experience.css
@@ -63,7 +63,7 @@ body.dark-mode .my-experience {
 }
 
 body.dark-mode .experience-header {
-  color: #ff6347;
+  color: #00cfe8;
 }
 
 body.dark-mode .experience-card {
@@ -72,7 +72,7 @@ body.dark-mode .experience-card {
 }
 
 body.dark-mode .experience-date {
-  color: #64ffda;
+  color: #00cfe8;
 }
 
 body.dark-mode .experience-details {
