--- a/src/home.css
+++ b/src/home.css
@@ -162,7 +162,7 @@
 }
 
 .dark-mode .home-content h2 {
-  color: #80dfff;
+  color: #00cfe8;
 }
 
 .dark-mode .home-button {
